<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:paddingTop="200px"
        android:id="@+id/scrollView2"
        android:layout_width="439dp"
        android:layout_height="732dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radGrpright"
                    android:layout_width="174dp"
                    android:layout_height="457dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radBtnright1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_1" />

                    <RadioButton
                        android:id="@+id/radBtnright2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_2" />

                    <RadioButton
                        android:id="@+id/radBtnright3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_3" />

                    <RadioButton
                        android:id="@+id/radBtnright4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_4" />

                    <RadioButton
                        android:id="@+id/radBtnright5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_5" />

                    <RadioButton
                        android:id="@+id/radBtnright6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_6" />

                    <RadioButton
                        android:id="@+id/radBtnright7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_7" />

                    <RadioButton
                        android:id="@+id/radBtnright8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_8" />

                    <RadioButton
                        android:id="@+id/radBtnright9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/right_9" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radGrpleft"
                    android:layout_width="143dp"
                    android:layout_height="452dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radBtnleft1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_1" />

                    <RadioButton
                        android:id="@+id/radBtnleft2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_2" />

                    <RadioButton
                        android:id="@+id/radBtnleft3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_3" />

                    <RadioButton
                        android:id="@+id/radBtnleft4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_4" />

                    <RadioButton
                        android:id="@+id/radBtnleft5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_5" />

                    <RadioButton
                        android:id="@+id/radBtnleft6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_6" />

                    <RadioButton
                        android:id="@+id/radBtnleft7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_7" />

                    <RadioButton
                        android:id="@+id/radBtnleft8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_8" />

                    <RadioButton
                        android:id="@+id/radBtnleft9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/left_9" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20sp"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>